<resources>
    <string name="app_name">Mover BOL</string>
    <string name="splash_title">Mover BOL</string>
    <string name="by_owner">By Netensity</string>
    <string name="splash_sub_title"><![CDATA[© Netensity Corporation 2019]]></string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="company_id">Company ID</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password_title">If you forgot your password, we can \nsend you an email to reset it.</string>
    <string name="send">Send</string>
    <string name="empty_field_error">Field cannot be empty</string>
    <string name="invalid_email_error">Please enter a valid email id</string>
    <string name="invalid_phone_error">Please enter a valid phone number</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="skip">SKIP</string>
    <string name="skip_">Skip</string>
    <string name="set_password">Set Password</string>
    <string name="forgot_password_heading">Forgot Password</string>
    <string name="error_passwords_not_matched">Did not match with New Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="jobs_in_progress">Jobs in Progress</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="submit">Submit</string>
    <string name="new_radio">New</string>
    <string name="in_progress">In Progress</string>
    <string name="accepted">Accepted</string>
    <string name="apply">Apply</string>
    <string name="enter_reason">Enter reason</string>
    <string name="bedroom">Bedrooms</string>
    <string name="square_feet">Square Feet</string>
    <string name="materials">Materials</string>
    <string name="trucks">Trucks</string>
    <string name="crew">Crew</string>
    <string name="walk_through">Walk Through</string>
    <string name="add_crew">Add Crew</string>
    <string name="add_truck">Add Truck</string>
    <string name="unit">Unit</string>
    <string name="quantity">Quantity</string>
    <string name="add_material">Add Material</string>
    <string name="job_summary">Job Summary</string>
    <string name="customer_info">Customer Info</string>
    <string name="packing">Packing</string>
    <string name="customer_id">Customer ID</string>
    <string name="customer_name">Customer Name</string>
    <string name="job_id">Job Id</string>
    <string name="phone">Phone</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="location_info"><![CDATA[Location Info >]]></string>
    <string name="pickup_extra_stops">Pickup Extra Stops</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="address">Address</string>
    <string name="location_type">Location Type</string>
    <string name="gate_code">Gate Code</string>
    <string name="distance_door_to_vehicle">Distance (Door to Vehicle)</string>
    <string name="yes">Yes</string>
    <string name="parking_move_day">Parking On Move Day</string>
    <string name="elevator">Elevator</string>
    <string name="flights_of_stairs">Flights of Stairs</string>
    <string name="person_name">Person name</string>
    <string name="contact">Contact</string>
    <string name="notes">Notes</string>
    <string name="delivery_extra_stops">Delivery Extra Stops</string>
    <string name="move_info">Move Info</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="start_time_">Start Time:</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="activity_start_time">Activity Start Time</string>
    <string name="men">Men</string>
    <string name="est_hrs">Est Hrs</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="est_vol_wt">Est Vol/Wt</string>
    <string name="comments">Comments</string>
    <string name="calendar_view">Calendar View</string>
    <string name="week_view">Week View</string>
    <string name="clock_in">Clock in</string>
    <string name="loading">Loading</string>
    <string name="drive">Drive</string>
    <string name="double_drive">Double Drive</string>
    <string name="unloading">Unloading</string>
    <string name="signature">Signature</string>
    <string name="Policy_link">I Agree with The DemoMover Cancellation And Reschedule Policy</string>
    <string name="Important_notes">*Important notes</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="pickup_address_detail">401,Streetway Cambridge</string>
    <string name="drop_address">401,Streetway Cambridge</string>
    <string name="move_size">Move size</string>
    <string name="crew_size">Crew size</string>
    <string name="movesize_value">401,Streetway Cambridge</string>
    <string name="crewsize_value">401,Streetway Cambridge</string>
    <string name="travel_time">Travel Time</string>
    <string name="rate_value">140/Hr</string>
    <string name="traveltime_value">45 min</string>
    <string name="estimate_hours">Estimated Hours</string>
    <string name="est_hour_value">6-12</string>
    <string name="est_vol_wt_value">700 CFT/4900 LBS</string>
    <string name="dummytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="list_of_articles">List of Articles</string>
    <string name="move_charges">Move Charges</string>
    <string name="movecharges_value">800</string>
    <string name="packing_material_charges">Packing  and Material Charges</string>
    <string name="crating_charges">Crating Charges</string>
    <string name="storage_charges">Storage One Time Charges</string>
    <string name="storage_recurring_charges">Storage Recurring Charges</string>
    <string name="additional_charges">Additional Charges</string>
    <string name="additionalcharges_value">800</string>
    <string name="valuation">Valuation</string>
    <string name="valuation_charges">Valuation Charges</string>
    <string name="valuation_value">800</string>
    <string name="fuel_surcharge_value">800</string>
    <string name="sub_total">Sub Total</string>
    <string name="subtotal_value">2000</string>
    <string name="service_tax">Service Tax</string>
    <string name="sales_tax">Sales Tax</string>
    <string name="discount">Discount</string>
    <string name="bottom_line_discount">Bottom Line Discount</string>
    <string name="discount_value">Discount Value</string>
    <string name="total">Total</string>
    <string name="total_value">2000</string>
    <string name="i_agree_wth_company_policies">I Agree with The DemoMover Company Policies</string>
    <string name="deposit_collected">Deposit Collected</string>
    <string name="amount">5000</string>
    <string name="amount_text">Amount</string>
    <string name="request">Request</string>
    <string name="job_activity">Job Activity</string>
    <string name="movers_arrival_time">Movers arrival time</string>
    <string name="start_break">Start Break</string>
    <string name="start_move">Start Move</string>
    <string name="resume_move">Resume Move</string>
    <string name="release_form">Forms and Documents</string>
    <string name="completed">Completed</string>
    <string name="box_deliver">Box Delivery</string>
    <string name="inventory">Inventory</string>
    <string name="photos">Photos</string>
    <string name="bill_of_lading">Bill of Lading</string>
    <string name="items">Items</string>
    <string name="est_qty">Est Qty</string>
    <string name="act_qty">Act Qty</string>
    <string name="vol">Vol</string>
    <string name="weight">Weight</string>
    <string name="total_est_qty">12</string>
    <string name="total_act_qty">12</string>
    <string name="total_vol">12</string>
    <string name="actual_qty">Actual Qty</string>
    <string name="add_storage_inventory">Add Storage Inventory</string>
    <string name="add_rider">Add Rider</string>
    <string name="agent_s_name">Agent\'s Name</string>
    <string name="carrier_s_reference_no">Carrier\'s Reference No</string>
    <string name="contract_or_gbl_no">Contract Or GBL No</string>
    <string name="govt_service_order_no">Govt Service Order No</string>
    <string name="tape_lot_no">Tape Lot No</string>
    <string name="nos_from">Nos from</string>
    <string name="van_no">Van No</string>
    <string name="tape_color">Tape Color</string>
    <string name="agent_s_contact_no">Agent\'s Contact No</string>
    <string name="desc">Desc</string>
    <string name="qty">QTY</string>
    <string name="days">Days</string>
    <string name="amt">AMT</string>
    <string name="declared_value_of_0_60_per_pound_per_article_ther_is_no_change_for_this_option">Declared Value of $0.60 per pound per article there is no change for this option</string>
    <string name="confirm">CONFIRM</string>
    <string name="change_color_list">Change color of list</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="head_owner_name">Owner\'s Grade Or Rating And Name</string>
    <string name="no_items">No Items</string>
    <string name="add_storage_invenotory">Please Add Storage Inventory</string>
    <string name="rider">Rider</string>
    <string name="packing_list">Packing List</string>
    <string name="inventory_id">Inventory Id</string>
    <string name="agent_name">Agent Name</string>
    <string name="contact_no">Contact No</string>
    <string name="total_items">Total Items</string>
    <string name="type">Type</string>
    <string name="uiop_poui">UIOP POUI</string>
    <string name="description">Description</string>
    <string name="activity">Activity</string>
    <string name="add_new_item">Add New Item</string>
    <string name="remove_from_list">Remove From List</string>
    <string name="rate">Rate</string>
    <string name="tick">Tick</string>
    <string name="change_password">Change Password</string>
    <string name="edit_items">Edit Items</string>
    <string name="worker">Worker</string>
    <string name="equipment">Equipment</string>
    <string name="billable">Billable</string>
    <string name="total_hours">TOTAL\n(Hours)</string>
    <string name="total_hrs">Total Hrs</string>
    <string name="break_head">Break</string>
    <string name="charges">Charges</string>
    <string name="billed_hrs">Billed Hrs.</string>
    <string name="worker_name">Worker Name</string>
    <string name="crew_resource">Crew/Resource</string>
    <string name="wo_id">W/O Id</string>
</resources>