<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_activity"
            style="@style/HeadTextRvClockHistory"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/activity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_date"
            style="@style/HeadTextRvClockHistory"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_worker"
            style="@style/HeadTextRvClockHistory"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:text="@string/worker" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_equipment"
            style="@style/HeadTextRvClockHistory"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:text="@string/equipment" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_rate"
            style="@style/HeadTextRvClockHistory"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:text="@string/rate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_total_hours"
            style="@style/HeadTextRvClockHistory"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:text="@string/total_hours" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_billable"
            style="@style/HeadTextRvClockHistory"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:text="@string/billable" />

        <!--  <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/txt_itemize"
              style="@style/HeadTextRvClockHistory"
              android:layout_width="@dimen/_120sdp"
              android:layout_height="wrap_content"
              android:text="@string/itemize" />-->

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_charges"
            style="@style/HeadTextRvClockHistory"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:text="@string/charges" />


    </LinearLayout>
</layout>