<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar" />
        <!--<item
            android:id="@+id/nav_jobs_in_progress"
            android:icon="@drawable/ic_jobs_in_progress"
            android:title="@string/jobs_in_progress" />-->
        <item
            android:id="@+id/nav_jobs_in_progress"
            android:icon="@drawable/ic_my_jobs"
            android:title="@string/jobs_in_progress" />
        <!--<item
            android:id="@+id/nav_my_jobs"
            android:icon="@drawable/ic_my_jobs"
            android:title="@string/my_jobs" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/my_profile" />-->

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications"
            app:actionLayout="@layout/layout_menu_counter"/>
        <!--<item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />-->
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
