<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/divider_grey"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/HeadTextRvClockHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/HeadTextRvClockHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wo_id" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/HeadTextRvClockHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/amount_text" />


    </LinearLayout>
</layout>