<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/divider_grey"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/HeadTextRvClockHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/HeadTextRvClockHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wo_id"
            android:visibility="invisible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_total_amount"
            style="@style/HeadTextRvClockHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/amount" />


    </LinearLayout>
</layout>